<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Midterm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Original_Text">Original Text</string>
    <string name="enter_text">Enter Text Here</string>
    <string name="rotation_value">Rotation Value</string>
    <string name="text_size">4</string>
    <string name="cipher_text">Cipher Text</string>

</resources>
