<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outputButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.example.midterm.MainActivity" >

    <TextView
        android:id="@+id/inputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="38dp"
        android:text="@string/Original_Text"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_text"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/seekBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotation_value"
        android:textSize="12dp" />

    <LinearLayout
        android:id="@+id/seekBarTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/rotSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="25"
            android:progress="4" />

        <TextView
            android:id="@+id/rotTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_size"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.24"
        android:text="@string/cipher_text" />

    <EditText
        android:id="@+id/outputEditText"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:longClickable="false" >

        <requestFocus />
    </EditText>

</LinearLayout>
